--- a/src/components/app-info/app-info.scss
+++ b/src/components/app-info/app-info.scss
@@ -1,7 +1,8 @@
 .app-info {
     padding: 25px;
-    background-color: #91B6B1;
-    border-radius: 4px;
+    background-color: #82b4bd;
+    border-radius: 20px;
     box-shadow: 15px 15px 30px #D2E1DF;    
     color: black;
+    text-align: center;
 }
