--- a/src/components/musicians-list/musicians-list.scss
+++ b/src/components/musicians-list/musicians-list.scss
@@ -1,7 +1,7 @@
 .app-list {
     margin-top: 30px;
-    background-color: #91B6B1;
-    border-radius: 4px;
+    background-color: #82b4bd;
+    border-radius: 20px;
     box-shadow: 15px 15px 30px #D2E1DF;  ;
     color: black;
 }
