--- a/src/components/search-panel/search-panel.scss
+++ b/src/components/search-panel/search-panel.scss
@@ -1,8 +1,8 @@
 .search-panel {
     margin-top: 30px;
     padding: 25px;
-    background-color: #91B6B1;
-    border-radius: 4px;
+    background-color: #82b4bd;
+    border-radius: 20px;
     box-shadow: 15px 15px 30px #D2E1DF;
     color: black;
 }
